Migrate Pak/JVM logic into pak-rs (#1)
* Explicitly use rust 1.84.0
* Rename pakext to pak-rs
* Load ZLib via pak-rs
* Upgrade Gradle
* slightly streamline java interface